--- a/production/docker-compose.yaml
+++ b/production/docker-compose.yaml
@@ -10,16 +10,26 @@ services:
       - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  app:
+  backend:
     container_name: forwarder_backend_application
     build:
-      context: ../../
+      context: ForwarderBackend
       dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
     env_file:
       - .env
     depends_on:
       - database
+  sender:
+    container_name: sender_api
+    build:
+      context: SenderApi
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - backend
+    volumes:
+      - telegram_session:mounted
 volumes:
   postgres_data:
+  telegram_session:
