Add telegram resender account name

--- a/.env-to-rename
+++ b/.env-to-rename
@@ -4,6 +4,7 @@ POSTGRES_DB=community_bot
 POSTGRES_PATH=database
 POSTGRES_PORT=9999
 FORWARDER_BACKEND_BOT_SECRET_KEY=bot_secret_key
+TELEGRAM_FORWARDER_USER=TELEGRAM_ACCOUNT_NAME
 
 API_ID=API_ID_FROM_MY.TELEGRAM.ORG
 API_HASH=API_HASH_FROM_MY.TELEGRAM.ORG
