--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ForwarderBackend"]
 	path = ForwarderBackend
-	url = git@github.com:lashnag/forwarder-backend.git
+	url = https://github.com/lashnag/telegram-client-sender-api.git
 [submodule "SenderApi"]
 	path = SenderApi
-	url = git@github.com:lashnag/telegram-client-sender-api.git
+	url = https://github.com/lashnag/forwarder-backend.git
