--- a/.env-to-rename
+++ b/.env-to-rename
@@ -8,3 +8,7 @@ FORWARDER_BACKEND_BOT_SECRET_KEY=bot_secret_key
 API_ID=API_ID_FROM_MY.TELEGRAM.ORG
 API_HASH=API_HASH_FROM_MY.TELEGRAM.ORG
 PHONE_NUMBER=TELEGRAM_ACCOUNT_PHONE_NUMBER
+
+KIBANA_PORT=elastic_port
+ELASTIC_USERNAME=elastic_username
+ELASTIC_PASSWORD=elastic_password
