Different index for different applications

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,18 +1,27 @@
 input {
-  tcp {
-    port => 5022
-    codec => json_lines
-  }
+    tcp {
+        port => 5022
+        codec => json_lines
+    }
 }
 
 output {
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "logs-%{+YYYY.MM.dd}"
-    user => "${ELASTIC_USERNAME}"
-    password => "${ELASTIC_PASSWORD}"
-  }
-  stdout {
-    codec => rubydebug
-  }
+    if [application] == "forwarder-backend" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "forwarder-backend-logs-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    } else if [application] == "sender-api" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "sender-api-logs-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    }
+    stdout {
+        codec => rubydebug
+    }
 }
