Add basic auth for backend controllers

--- a/.env-to-rename
+++ b/.env-to-rename
@@ -12,3 +12,6 @@ PHONE_NUMBER=TELEGRAM_ACCOUNT_PHONE_NUMBER
 KIBANA_PORT=elastic_port
 ELASTIC_USERNAME=elastic_username
 ELASTIC_PASSWORD=elastic_password
+
+BACKEND_BASIC_AUTH_USER=admin
+BACKEND_BASIC_AUTH_PASSWORD=admin
