Use containers instead of building

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
       interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 5
   backend:
     image: lashnag/forwarder_backend_application:latest
     container_name: forwarder_backend_application
@@ -29,7 +29,7 @@ services:
       test: ["CMD", "curl", "-f", "-u", "${BACKEND_BASIC_AUTH_USER}:${BACKEND_BASIC_AUTH_PASSWORD}", "http://localhost:8080/actuator/health"]
       interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 5
   sender:
     image: lashnag/sender_api:latest
     container_name: sender_api
@@ -39,7 +39,7 @@ services:
       logstash:
         condition: service_healthy
     volumes:
-      - ./SenderApi/mounted:/mounted
+      - ./mounted/sender_api:/sender_api/mounted
   lemmatizer:
     image: lashnag/lemmatizer:latest
     container_name: lemmatizer
@@ -63,7 +63,7 @@ services:
       test: [ "CMD", "curl", "-u", "${ELASTIC_USERNAME}:${ELASTIC_PASSWORD}", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=50s" ]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
   logstash:
     image: logstash:7.17.0
     container_name: logstash
@@ -81,7 +81,7 @@ services:
       test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:9600/_node/stats" ]
       interval: 10s
       timeout: 10s
-      retries: 3
+      retries: 5
   kibana:
     image: kibana:7.17.0
     container_name: kibana
