--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       timeout: 10s
       retries: 5
   backend:
-    image: lashnag/forwarder_backend_application:latest
+    image: lashnag/forwarder_backend_application:1.0.0
     container_name: forwarder_backend_application
     ports:
       - "8080:8080"
@@ -31,7 +31,7 @@ services:
       timeout: 10s
       retries: 5
   sender:
-    image: lashnag/sender_api:latest
+    image: lashnag/sender_api:1.0.0
     container_name: sender_api
     env_file:
       - .env
@@ -41,10 +41,10 @@ services:
     volumes:
       - ./mounted/sender_api:/sender_api/mounted
   lemmatizer:
-    image: lashnag/lemmatizer:latest
+    image: lashnag/lemmatizer:1.0.0
     container_name: lemmatizer
   ocr:
-    image: lashnag/ocr:latest
+    image: lashnag/ocr:1.0.0
     container_name: ocr
   elasticsearch:
     image: elasticsearch:7.17.0
