Update images (add logs from other python apps)

--- a/logstash.conf
+++ b/logstash.conf
@@ -20,6 +20,20 @@ output {
             user => "${ELASTIC_USERNAME}"
             password => "${ELASTIC_PASSWORD}"
         }
+    } else if [application] == "lemmatizer" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "lemmatizer-logs-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    } else if [application] == "ocr" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "ocr-logs-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
     }
     stdout {
         codec => rubydebug
