Add grafana for alerting

--- a/.env-to-rename
+++ b/.env-to-rename
@@ -16,4 +16,8 @@ ELASTIC_PASSWORD=elastic_password
 BACKEND_BASIC_AUTH_USER=admin
 BACKEND_BASIC_AUTH_PASSWORD=admin
 
+GRAFANA_PORT=8888
+GRAFANA_USERNAME=admin
+GRAFANA_PASSWORD=admin
+
 PROD_MODE=true
