LLM and dates Search

--- a/.env-to-rename
+++ b/.env-to-rename
@@ -20,5 +20,16 @@ GRAFANA_PORT=8888
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=admin
 
+DEEP_SEEK_API_TOKEN="see https://platform.deepseek.com/usage"
+OPEN_AI_API_TOKEN="see https://platform.openai.com/settings/organization/api-keys"
+
+LOCAL_OLLAMA_HOST=127.0.0.1
+LOCAL_OLLAMA_PORT=11434
+LOCAL_OLLAMA_BASIC_USERNAME=admin
+LOCAL_OLLAMA_BASIC_PASSWORD=admin
+
+YANDEX_GPT_RESOURCE="see http://console.yandex.cloud/cloud/"
+YANDEX_GPT_API_TOKEN="see http://console.yandex.cloud/cloud/"
+
 DOMAIN=https://your-domain.com
 PROD_MODE=true
