--- a/mounted/logstash/logstash.conf
+++ b/mounted/logstash/logstash.conf
@@ -27,10 +27,25 @@ output {
             user => "${ELASTIC_USERNAME}"
             password => "${ELASTIC_PASSWORD}"
         }
+    }
+    else if [application] == "telegram-messages" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "telegram-messages-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
     } else if [application] == "ocr" {
         elasticsearch {
             hosts => ["http://elasticsearch:9200"]
             index => "ocr-logs-%{+YYYY.MM.dd}"
+            user => "${ELASTIC_USERNAME}"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    } else if [application] == "entities-extractor" {
+        elasticsearch {
+            hosts => ["http://elasticsearch:9200"]
+            index => "entities-extractor-%{+YYYY.MM.dd}"
             user => "${ELASTIC_USERNAME}"
             password => "${ELASTIC_PASSWORD}"
         }
