--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   database:
     image: postgres:15
     container_name: forwarder_backend_database
+    restart: unless-stopped
     env_file:
       - .env
     ports:
@@ -16,6 +17,7 @@ services:
   backend:
     image: lashnag/forwarder_backend_application:1.3.9
     container_name: forwarder_backend_application
+    restart: unless-stopped
     ports:
       - "8080:8080"
     env_file:
@@ -39,6 +41,7 @@ services:
   sender:
     image: lashnag/sender_api:1.3.1
     container_name: sender_api
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -49,6 +52,7 @@ services:
   lemmatizer:
     image: lashnag/lemmatizer:1.1.0
     container_name: lemmatizer
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -62,6 +66,7 @@ services:
   ocr:
     image: lashnag/ocr:1.1.0
     container_name: ocr
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -75,6 +80,7 @@ services:
   entities-extractor:
     image: lashnag/entities-extractor:1.0.2
     container_name: entities-extractor
+    restart: unless-stopped
     env_file:
       - .env
     depends_on:
@@ -88,6 +94,7 @@ services:
   elasticsearch:
     image: elasticsearch:7.17.0
     container_name: elasticsearch
+    restart: unless-stopped
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
@@ -106,6 +113,7 @@ services:
   logstash:
     image: logstash:7.17.0
     container_name: logstash
+    restart: unless-stopped
     environment:
       - XPACK_SECURITY_ENABLED=false
       - XPACK_MONITORING_ENABLED=false
@@ -124,6 +132,7 @@ services:
   kibana:
     image: kibana:7.17.0
     container_name: kibana
+    restart: unless-stopped
     ports:
       - "${KIBANA_PORT}:5601"
     depends_on:
@@ -138,6 +147,7 @@ services:
   grafana:
     image: grafana/grafana:11.5.1
     container_name: grafana
+    restart: unless-stopped
     ports:
       - "${GRAFANA_PORT}:3000"
     depends_on:
