Turn off loggers env

--- a/.env-to-rename
+++ b/.env-to-rename
@@ -29,3 +29,4 @@ GIGA_CHAT_ACCESS_TOKEN="see https://developers.sber.ru/studio/workspaces/"
 
 DOMAIN=https://your-domain.com
 PROD_MODE=true
+REMOTE_LOGGER=false
